Update title in docs

--- a/docma.config.json
+++ b/docma.config.json
@@ -3,7 +3,7 @@
   "src": "*.js",
   "app": {
     "base": "/rasa-client/",
-    "title": "Rasa core HTTP client for Node.js",
+    "title": "Rasa HTTP client",
     "server": "github"
   }
 }
